fix(sass): breakpoint overlap

--- a/styles/settings/_breakpoints.scss
+++ b/styles/settings/_breakpoints.scss
@@ -14,7 +14,7 @@ $breakpoints: (
     min-width: 1280px,
   ),
   'up-to-desktop': (
-    max-width: 1280px,
+    max-width: 1279px,
   ),
   'desktop-large': (
     min-width: 1920px,
